# Ozu

./: .gitignore  CMakeLists.txt  main.cpp  ops.cpp  tensor.cpp  tensor.hpp  tokenizer.cpp
models/: llama.cpp
src/: backend.hpp  main.cpp  model.hpp  ops.cpp  ops.hpp  safetensors.hpp  tensor.hpp  tokenizer.hpp  utils.hpp
src/backends/: cpu_backend.cpp  cpu_backend.hpp  metal_backend.hpp  metal_backend.mm
src/models/: llama.cpp  llama.hpp
